--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
             <nav role="navigation" aria-label="Main navigation">
                 <a href="/" class="logo" aria-label="Sabbir Islam- Home">
                     <i class="fas fa-code logo-icon" aria-hidden="true"></i>
-                    <span>SabbirIslam</span>
+                    <span>Sabbir Islam</span>
                 </a>
                 <ul class="nav-links" role="menubar">
                     <li role="none"><a href="#home" class="active" role="menuitem">Home</a></li>
@@ -1351,7 +1351,7 @@
         <div class="container">
             <div class="footer-content">
                 <a href="/" class="footer-logo" aria-label="Alex Morgan - Home">
-                    <i class="fas fa-code" aria-hidden="true"></i> AlexMorgan
+                    <i class="fas fa-code" aria-hidden="true"></i> SabbirIslam
                 </a>
                 <div class="social-links">
                     <a href="https://github.com/Jkislam" class="social-link" aria-label="Visit my GitHub profile"><i class="fab fa-github" aria-hidden="true"></i></a>
