--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
     {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Alex Morgan",
+        "name": "Sabbir Islam",
         "jobTitle": "Web Developer",
-        "url": "https://alexmorgan.dev",
+        "url": "https://jkislam.github.io/Sabbir-Islam-/",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Portland",
             "addressRegion": "Oregon",
-            "addressCountry": "US"
+            "addressCountry": "BD"
         },
-        "email": "hello@alexmorgan.dev",
-        "telephone": "+1-503-555-0123",
+        "email": "sabbirislam3640@gmail.com",
+        "telephone": "+880-130-0517-25",
         "sameAs": [
-            "https://github.com/alexmorgan",
-            "https://linkedin.com/in/alexmorgan",
-            "https://twitter.com/alexmorgan_dev"
+            "https://github.com/alexm",
+            "https://linkedin.com/in/alen",
+            "https://twitter.com/aldev"
         ],
         "knowsAbout": ["Web Development", "UI/UX Design", "Frontend Development", "Responsive Design", "JavaScript", "React", "Node.js"],
-        "description": "Professional web developer with over 7 years of experience creating custom websites and web applications."
+        "description": "Professional web developer with over 3 years of experience creating custom websites and web applications."
     }
     </script>
     
@@ -1247,7 +1247,7 @@
                 <h2 id="testimonials-heading" class="section-title" style="text-align: center;">Client Testimonials</h2>
                 <div class="testimonial-card">
                     <p class="testimonial-text">
-                        "Alex transformed our outdated website into a modern, user-friendly platform. 
+                        "Sabbir transformed our outdated website into a modern, user-friendly platform. 
                         Our bounce rate decreased by 60% and online inquiries increased by 200%. 
                         His attention to detail and understanding of our business needs was exceptional."
                     </p>
@@ -1255,7 +1255,7 @@
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-text">
-                        "Working with Alex was a game-changer for our startup. He not only built a 
+                        "Working with Sabbir was a game-changer for our startup. He not only built a 
                         beautiful application but also taught our team best practices for maintenance. 
                         His communication throughout the project was outstanding."
                     </p>
