--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="google-site-verification" content="your-verification-code">
     
     <!-- Open Graph Tags for Social Sharing -->
-    <meta property="og:title" content="Alex Morgan | Creative Web Developer & Digital Solutions Expert">
+    <meta property="og:title" content="Sabbir Islam| Creative Web Developer & Digital Solutions Expert">
     <meta property="og:description" content="Professional web developer creating beautiful, functional websites that drive business growth. Based in Portland, Oregon.">
     <meta property="og:image" content="https://sabbirislam.dev/images/social-preview.jpg">
     <meta property="og:url" content="https://sabbirislam.dev">
@@ -1288,7 +1288,7 @@
                                 </div>
                                 <div>
                                     <h4>Email</h4>
-                                    <p>hello@alexmorgan.dev</p>
+                                    <p>sabbirislam3640@gmail.com</p>
                                     <p style="font-size: 0.9rem; color: var(--gray);">I typically respond within 24 hours</p>
                                 </div>
                             </div>
@@ -1298,7 +1298,7 @@
                                 </div>
                                 <div>
                                     <h4>Location</h4>
-                                    <p>Portland, Oregon</p>
+                                    <p>Mymanshing, Bangladesh</p>
                                     <p style="font-size: 0.9rem; color: var(--gray);">Serving clients across the United States and internationally</p>
                                 </div>
                             </div>
@@ -1308,7 +1308,7 @@
                                 </div>
                                 <div>
                                     <h4>Availability</h4>
-                                    <p>Freelance & Full-time</p>
+                                    <p>Freelance & Remote/Full-time</p>
                                     <p style="font-size: 0.9rem; color: var(--gray);">Currently accepting projects starting in November</p>
                                 </div>
                             </div>
@@ -1350,7 +1350,7 @@
     <footer role="contentinfo">
         <div class="container">
             <div class="footer-content">
-                <a href="/" class="footer-logo" aria-label="Alex Morgan - Home">
+                <a href="/" class="footer-logo" aria-label="Sabbir Islam- Home">
                     <i class="fas fa-code" aria-hidden="true"></i> SabbirIslam
                 </a>
                 <div class="social-links">
